fix: DocSearch input CSS on Firefox

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2294,6 +2294,11 @@ article .anchor-title {
   color: rgb(219 234 254 / var(--tw-text-opacity));
 }
 
+.DocSearch-Input:focus-visible {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .DocSearch-Input::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(219 234 254 / var(--tw-text-opacity));
